examples/test_package/steps/benchzebra:precise.pl_run4/#test_analysis_2_result.txt
### Evaluation Report: Zebra Puzzle in ProbLog

---

#### **1. Document Title**
**Analysis of Zebra Puzzle Implementation in ProbLog**

---

#### **2. Background and Purpose**
The Zebra Puzzle is a classic logic puzzle where the goal is to determine the arrangement of houses and their attributes based on a set of given constraints. This report evaluates the implementation of the puzzle in ProbLog, focusing on logical correctness, predicate definitions, and adherence to the puzzle's requirements.

---

#### **3. Test Results Summary**
The provided code fails during execution with the following error:
```plaintext
Error evaluating Problog model:
    return exec_func(node_id=node_id, node=node, **kwdargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_stack.py", line 839, in eval_call
    raise UnknownClause(origin, location=loc)
problog.engine.UnknownClause: No clauses found for 'member/2' at 4:1.
```

**Failed Queries:**
- The query `zebra(Houses)` fails because the predicate `member/2` is not defined in the ProbLog context.

---

#### **4. Failure Localization**
- **Failed Predicate:** `member/2`
  - **Location:** Line 4 of the code.
  - **Issue:** The predicate `member/2` is used in the code but not defined in the ProbLog environment. ProbLog does not inherently support the `member/2` predicate from classical Prolog.

---

#### **5. Root Cause Analysis**
- **Classical Prolog Context:**
  - The `member/2` predicate is a standard Prolog predicate for list membership. However, ProbLog requires explicit definitions of such predicates or the use of built-in predicates.
  - The error occurs because the code assumes `member/2` is available, but it is not defined in the ProbLog context.

- **ProbLog Context:**
  - The code does not involve probabilistic facts or DeepProbLog features (e.g., `nn/3`, `tensor/…`). The issue is purely related to predicate availability.

---

#### **6. Overall Analysis**
- **Functional Requirements:**
  - **Classical Reasoning:** Partially met. The logic of the puzzle is correctly encoded, but the missing `member/2` predicate prevents execution.
  - **Probabilistic Reasoning:** Not applicable, as the puzzle is deterministic.
  - **Neural Network Integration:** Not used. Report: "DeepProbLog feature not used."

- **Edge Cases:**
  - The code assumes the `member/2` predicate is available, which is a critical oversight.
  - The recursive predicates (`right_of/3`, `next_to/3`) are correctly defined and would work if the `member/2` issue were resolved.

---

#### **7. Error Summary**

| Number | Problem                          | Impact                          | Suggestion                                  |
|--------|----------------------------------|---------------------------------|---------------------------------------------|
| 1      | Undefined `member/2` predicate   | Code fails to execute           | Define `member/2` or use a ProbLog-compatible alternative. |

---

### **Suggested Fix**
Replace the `member/2` predicate with a ProbLog-compatible definition or use built-in predicates. For example:
```prolog
member(X, [X|_]).
member(X, [_|T]) :- member(X, T).
```

Alternatively, ensure the predicate is imported or defined in the ProbLog environment.

---

### **Conclusion**
The Zebra Puzzle implementation is logically sound but fails due to the undefined `member/2` predicate. Addressing this issue will allow the code to execute correctly. No probabilistic or DeepProbLog features are used in this implementation.